# prg203405

./: .gitignore  README.md
aulas/: README.md
aulas/20241007/Hello/: world.cpp
aulas/Asteroids/: Asteroid.cpp  Asteroid.h  Asteroids.pro  AsteroidsScene.cpp  AsteroidsScene.h  AsteroidsWindow.cpp  AsteroidsWindow.h  BlockItem.cpp  BlockItem.h  CMakeLists.txt  Config.h  Mover.cpp  Mover.h  Spaceship.cpp  Spaceship.h  asteroids.cpp  asteroids.h  main.cpp  resources.qrc
aulas/DiceGame/: CMakeLists.txt  main.cpp
aulas/DiceGame/src/: dicegame.cpp  dicegame.h  die.cpp  die.h  main.cpp
aulas/Hello/: Hello.pro  main.cpp  world.h
aulas/HelloOO/: HelloOO.pro  main.cpp  pessoa.cpp  pessoa.h
aulas/HelloQT/: HelloQT.pro  helloqt.cpp  helloqt.h  led.cpp  led.h  main.cpp  teste.cpp  teste.h
aulas/Overload/: CMakeLists.txt  main.cpp
aulas/Polimorfismo/: CMakeLists.txt  main.cpp
aulas/QtCalc/: CMakeLists.txt  main.cpp  numpad.cpp  numpad.h  qtcalc.cpp  qtcalc.h
aulas/overload/: CMakeLists.txt  main.cpp
aulas/polimorphism/: .gitignore  CMakeLists.txt  circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h
aulas/stl/: main.cpp
aulas/stl/example_01/: CMakeLists.txt  main.cpp
aulas/stl/example_02/: CMakeLists.txt  main.cpp
aulas/stl/example_03/: CMakeLists.txt  main.cpp
aulas/stl/exercise/: CMakeLists.txt  main.cpp
aulas/stl/template/: CMakeLists.txt  main.cpp
labs/: README.md
labs/lab01/: README.md
labs/lab01/ex07/: car.cpp  car.h  ex07.pro  main.cpp
labs/lab02/: README.md
projeto/: README.md  analise.md  implementacao.md  projeto.md  testes.md
projeto/code/: README.md
projeto/img/: README.md
